--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-  </head>
+   
+  </head> <script src="//code.tidio.co/boinqlemwbof07rfb0pp5mpco6wgvc9z.js" async></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
